--- a/pages/error/styles.css
+++ b/pages/error/styles.css
@@ -1,5 +1,5 @@
 /**
- * React Static Boilerplate
+ * kingfolk
  * https://github.com/koistya/react-static-boilerplate
  *
  * Copyright © 2015-2016 Konstantin Tarkus (@koistya)
