--- a/components/Layout/Header.css
+++ b/components/Layout/Header.css
@@ -1,7 +1,7 @@
 /*TODO: FIX URL PROBLEM*/
 .portfolio-header {
   position: relative;
-  background-image: url(http://4.bp.blogspot.com/-o7Sa1IF4FE8/VjIZeuLWCjI/AAAAAAAAkTE/5h-pOqeOqpU/s1600/Abstract%2BPainting%2BHD%2BWallpapers%2B1.jpg);
+  /*background-image: url(http://4.bp.blogspot.com/-o7Sa1IF4FE8/VjIZeuLWCjI/AAAAAAAAkTE/5h-pOqeOqpU/s1600/Abstract%2BPainting%2BHD%2BWallpapers%2B1.jpg);*/
 }
 
 .portfolio-header :global .mdl-layout__header-row {
